styling: fixed comments, constants, unused imports in Clauses